.antlr/YAPLGrammerParser.java
// Generated from /Users/gerardomendez/Documents/github/compiladores-proyecto-2/YAPLGrammer.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YAPLGrammerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, COMMENTS=14, PLUS=15, MINUS=16, 
		STAR=17, SLASH=18, LOWERTHAN=19, EQUALS=20, LOWEREQUAL=21, IFKEY=22, LOOPKEY=23, 
		ELSEKEY=24, THENKEY=25, WHILEKEY=26, CLASSKEY=27, INHERITSKEY=28, FIKEY=29, 
		INKEY=30, LETKEY=31, NEWKEY=32, POOLKEY=33, ISVOIDKEY=34, NOTKEY=35, SELFKEY=36, 
		TYPE=37, INTEGERS=38, ID=39, OBJECT=40, ALPHANUMERIC=41, DIGIT=42, LOWER=43, 
		UPPER=44, LETTERS=45, STRING=46, WHITESPACE=47;
	public static final int
		RULE_program = 0, RULE_classP = 1, RULE_feature = 2, RULE_method = 3, 
		RULE_arguments = 4, RULE_attribute = 5, RULE_formal = 6, RULE_expression = 7, 
		RULE_ifx = 8, RULE_whilex = 9, RULE_letx = 10, RULE_voidx = 11, RULE_notx = 12, 
		RULE_parenthesisx = 13, RULE_negationx = 14, RULE_declaration = 15, RULE_selfx = 16, 
		RULE_multipleExpr = 17, RULE_ops = 18, RULE_methodCall = 19, RULE_overwrite = 20, 
		RULE_attrWrite = 21, RULE_funCall = 22, RULE_more = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classP", "feature", "method", "arguments", "attribute", "formal", 
			"expression", "ifx", "whilex", "letx", "voidx", "notx", "parenthesisx", 
			"negationx", "declaration", "selfx", "multipleExpr", "ops", "methodCall", 
			"overwrite", "attrWrite", "funCall", "more"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'{'", "'}'", "'('", "')'", "':'", "','", "'<-'", "'true'", 
			"'false'", "'~'", "'@'", "'.'", null, "'+'", "'-'", "'*'", "'/'", "'<'", 
			"'='", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "COMMENTS", "PLUS", "MINUS", "STAR", "SLASH", "LOWERTHAN", 
			"EQUALS", "LOWEREQUAL", "IFKEY", "LOOPKEY", "ELSEKEY", "THENKEY", "WHILEKEY", 
			"CLASSKEY", "INHERITSKEY", "FIKEY", "INKEY", "LETKEY", "NEWKEY", "POOLKEY", 
			"ISVOIDKEY", "NOTKEY", "SELFKEY", "TYPE", "INTEGERS", "ID", "OBJECT", 
			"ALPHANUMERIC", "DIGIT", "LOWER", "UPPER", "LETTERS", "STRING", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YAPLGrammer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YAPLGrammerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ClassPContext meat;
		public Token end;
		public List<ClassPContext> classP() {
			return getRuleContexts(ClassPContext.class);
		}
		public ClassPContext classP(int i) {
			return getRuleContext(ClassPContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				((ProgramContext)_localctx).meat = classP();
				setState(49);
				((ProgramContext)_localctx).end = match(T__0);
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASSKEY );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassPContext extends ParserRuleContext {
		public Token className;
		public Token inherits;
		public Token parentClass;
		public FeatureContext features;
		public TerminalNode CLASSKEY() { return getToken(YAPLGrammerParser.CLASSKEY, 0); }
		public List<TerminalNode> TYPE() { return getTokens(YAPLGrammerParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(YAPLGrammerParser.TYPE, i);
		}
		public TerminalNode INHERITSKEY() { return getToken(YAPLGrammerParser.INHERITSKEY, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public ClassPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classP; }
	}

	public final ClassPContext classP() throws RecognitionException {
		ClassPContext _localctx = new ClassPContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(CLASSKEY);
			setState(56);
			((ClassPContext)_localctx).className = match(TYPE);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITSKEY) {
				{
				setState(57);
				((ClassPContext)_localctx).inherits = match(INHERITSKEY);
				setState(58);
				((ClassPContext)_localctx).parentClass = match(TYPE);
				}
			}

			setState(61);
			match(T__1);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(62);
				((ClassPContext)_localctx).features = feature();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public MethodContext fmethod;
		public AttributeContext fattribute;
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(70);
				((FeatureContext)_localctx).fmethod = method();
				}
				break;
			case 2:
				{
				setState(71);
				((FeatureContext)_localctx).fattribute = attribute();
				}
				break;
			}
			setState(74);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public Token name;
		public ArgumentsContext argumentList;
		public Token returnType;
		public ExpressionContext mainExpr;
		public TerminalNode ID() { return getToken(YAPLGrammerParser.ID, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode TYPE() { return getToken(YAPLGrammerParser.TYPE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((MethodContext)_localctx).name = match(ID);
			setState(77);
			match(T__3);
			setState(78);
			((MethodContext)_localctx).argumentList = arguments();
			setState(79);
			match(T__4);
			setState(80);
			match(T__5);
			setState(81);
			((MethodContext)_localctx).returnType = match(TYPE);
			setState(82);
			match(T__1);
			setState(83);
			((MethodContext)_localctx).mainExpr = expression();
			setState(84);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(86);
				formal();
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(87);
					match(T__6);
					setState(88);
					formal();
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public Token name;
		public Token typeName;
		public TerminalNode ID() { return getToken(YAPLGrammerParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(YAPLGrammerParser.TYPE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((AttributeContext)_localctx).name = match(ID);
			setState(97);
			match(T__5);
			setState(98);
			((AttributeContext)_localctx).typeName = match(TYPE);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(99);
				match(T__7);
				setState(100);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public Token name;
		public Token typeName;
		public TerminalNode ID() { return getToken(YAPLGrammerParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(YAPLGrammerParser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			((FormalContext)_localctx).name = match(ID);
			setState(104);
			match(T__5);
			setState(105);
			((FormalContext)_localctx).typeName = match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public OverwriteContext calls;
		public Token stringexpression;
		public IfxContext ifexpression;
		public WhilexContext whileexpression;
		public LetxContext letexpression;
		public DeclarationContext newDeclaration;
		public VoidxContext voidexpression;
		public NotxContext notexpression;
		public Token trueexpression;
		public Token falseexpression;
		public ParenthesisxContext parenthesisexpression;
		public MultipleExprContext innerexpression;
		public NegationxContext negationexpression;
		public Token integerexpression;
		public SelfxContext selfexpression;
		public OpsContext nextExpr;
		public OpsContext ops() {
			return getRuleContext(OpsContext.class,0);
		}
		public OverwriteContext overwrite() {
			return getRuleContext(OverwriteContext.class,0);
		}
		public TerminalNode STRING() { return getToken(YAPLGrammerParser.STRING, 0); }
		public IfxContext ifx() {
			return getRuleContext(IfxContext.class,0);
		}
		public WhilexContext whilex() {
			return getRuleContext(WhilexContext.class,0);
		}
		public LetxContext letx() {
			return getRuleContext(LetxContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public VoidxContext voidx() {
			return getRuleContext(VoidxContext.class,0);
		}
		public NotxContext notx() {
			return getRuleContext(NotxContext.class,0);
		}
		public ParenthesisxContext parenthesisx() {
			return getRuleContext(ParenthesisxContext.class,0);
		}
		public MultipleExprContext multipleExpr() {
			return getRuleContext(MultipleExprContext.class,0);
		}
		public NegationxContext negationx() {
			return getRuleContext(NegationxContext.class,0);
		}
		public TerminalNode INTEGERS() { return getToken(YAPLGrammerParser.INTEGERS, 0); }
		public SelfxContext selfx() {
			return getRuleContext(SelfxContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(107);
				((ExpressionContext)_localctx).calls = overwrite();
				}
				break;
			case STRING:
				{
				setState(108);
				((ExpressionContext)_localctx).stringexpression = match(STRING);
				}
				break;
			case IFKEY:
				{
				setState(109);
				((ExpressionContext)_localctx).ifexpression = ifx();
				}
				break;
			case WHILEKEY:
				{
				setState(110);
				((ExpressionContext)_localctx).whileexpression = whilex();
				}
				break;
			case LETKEY:
				{
				setState(111);
				((ExpressionContext)_localctx).letexpression = letx();
				}
				break;
			case NEWKEY:
				{
				setState(112);
				((ExpressionContext)_localctx).newDeclaration = declaration();
				}
				break;
			case ISVOIDKEY:
				{
				setState(113);
				((ExpressionContext)_localctx).voidexpression = voidx();
				}
				break;
			case NOTKEY:
				{
				setState(114);
				((ExpressionContext)_localctx).notexpression = notx();
				}
				break;
			case T__8:
				{
				setState(115);
				((ExpressionContext)_localctx).trueexpression = match(T__8);
				}
				break;
			case T__9:
				{
				setState(116);
				((ExpressionContext)_localctx).falseexpression = match(T__9);
				}
				break;
			case T__3:
				{
				setState(117);
				((ExpressionContext)_localctx).parenthesisexpression = parenthesisx();
				}
				break;
			case T__1:
				{
				setState(118);
				((ExpressionContext)_localctx).innerexpression = multipleExpr();
				}
				break;
			case T__10:
				{
				setState(119);
				((ExpressionContext)_localctx).negationexpression = negationx();
				}
				break;
			case INTEGERS:
				{
				setState(120);
				((ExpressionContext)_localctx).integerexpression = match(INTEGERS);
				}
				break;
			case SELFKEY:
				{
				setState(121);
				((ExpressionContext)_localctx).selfexpression = selfx();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(124);
			((ExpressionContext)_localctx).nextExpr = ops();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfxContext extends ParserRuleContext {
		public ExpressionContext ifexp;
		public ExpressionContext thenexp;
		public ExpressionContext elseexp;
		public TerminalNode IFKEY() { return getToken(YAPLGrammerParser.IFKEY, 0); }
		public TerminalNode THENKEY() { return getToken(YAPLGrammerParser.THENKEY, 0); }
		public TerminalNode ELSEKEY() { return getToken(YAPLGrammerParser.ELSEKEY, 0); }
		public TerminalNode FIKEY() { return getToken(YAPLGrammerParser.FIKEY, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public IfxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifx; }
	}

	public final IfxContext ifx() throws RecognitionException {
		IfxContext _localctx = new IfxContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(IFKEY);
			setState(127);
			((IfxContext)_localctx).ifexp = expression();
			setState(128);
			match(THENKEY);
			setState(129);
			((IfxContext)_localctx).thenexp = expression();
			setState(130);
			match(ELSEKEY);
			setState(131);
			((IfxContext)_localctx).elseexp = expression();
			setState(132);
			match(FIKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhilexContext extends ParserRuleContext {
		public ExpressionContext whileSentence;
		public ExpressionContext whileAction;
		public TerminalNode WHILEKEY() { return getToken(YAPLGrammerParser.WHILEKEY, 0); }
		public TerminalNode LOOPKEY() { return getToken(YAPLGrammerParser.LOOPKEY, 0); }
		public TerminalNode POOLKEY() { return getToken(YAPLGrammerParser.POOLKEY, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public WhilexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whilex; }
	}

	public final WhilexContext whilex() throws RecognitionException {
		WhilexContext _localctx = new WhilexContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whilex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(WHILEKEY);
			setState(135);
			((WhilexContext)_localctx).whileSentence = expression();
			setState(136);
			match(LOOPKEY);
			setState(137);
			((WhilexContext)_localctx).whileAction = expression();
			setState(138);
			match(POOLKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetxContext extends ParserRuleContext {
		public AttributeContext letOne;
		public AttributeContext letMore;
		public ExpressionContext inexp;
		public TerminalNode LETKEY() { return getToken(YAPLGrammerParser.LETKEY, 0); }
		public TerminalNode INKEY() { return getToken(YAPLGrammerParser.INKEY, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LetxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letx; }
	}

	public final LetxContext letx() throws RecognitionException {
		LetxContext _localctx = new LetxContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_letx);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(LETKEY);
			setState(141);
			((LetxContext)_localctx).letOne = attribute();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(142);
				match(T__6);
				setState(143);
				((LetxContext)_localctx).letMore = attribute();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(INKEY);
			setState(150);
			((LetxContext)_localctx).inexp = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoidxContext extends ParserRuleContext {
		public TerminalNode ISVOIDKEY() { return getToken(YAPLGrammerParser.ISVOIDKEY, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VoidxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidx; }
	}

	public final VoidxContext voidx() throws RecognitionException {
		VoidxContext _localctx = new VoidxContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_voidx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(ISVOIDKEY);
			setState(153);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotxContext extends ParserRuleContext {
		public TerminalNode NOTKEY() { return getToken(YAPLGrammerParser.NOTKEY, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NotxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notx; }
	}

	public final NotxContext notx() throws RecognitionException {
		NotxContext _localctx = new NotxContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_notx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(NOTKEY);
			setState(156);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParenthesisxContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParenthesisxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parenthesisx; }
	}

	public final ParenthesisxContext parenthesisx() throws RecognitionException {
		ParenthesisxContext _localctx = new ParenthesisxContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_parenthesisx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__3);
			setState(159);
			expression();
			setState(160);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegationxContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NegationxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negationx; }
	}

	public final NegationxContext negationx() throws RecognitionException {
		NegationxContext _localctx = new NegationxContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_negationx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__10);
			setState(163);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode NEWKEY() { return getToken(YAPLGrammerParser.NEWKEY, 0); }
		public TerminalNode TYPE() { return getToken(YAPLGrammerParser.TYPE, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(NEWKEY);
			setState(166);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
